@@ -1,3 +1,8 @@
+2006-01-08  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.c, ptp-pack.c, ptp.h: Enhanced ptp_nikon_check_event(),
+	  unpack event list.
+
 2006-01-06  Marcus Meissner  <marcus@jet.franken.de>
 
 	* PTPIP.TXT: describes PTP/IP communication basics.
